<resources>
    <string name="app_name">Receptomat</string>
    <string name="image_description">Slika</string>
    <string name="login_title">Prijava</string>
    <string name="username_hint">Korisničko ime</string>
    <string name="password_hint">Lozinka</string>
    <string name="login_button">Prijavi se</string>
    <string name="cancel_button">Odustani</string>
    <string name="dontHaveAccount">Nemaš račun?</string>
    <string name="save_button">Spremi</string>
    <string name="name_hint">Ime i prezime\n</string>
    <string name="password_again_hint">Ponovno unesi lozinku</string>
    <string name="registration_button">Registriraj se</string>
    <string name="hasAccount">Već imate račun?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="work_in_progress">Stanica je u izradi!</string>
    <string name="register">Registracija</string>
    <string name="email_hint">Email</string>
    <string name="Receptomat_caps_lock">RECEPTOMAT</string>
    <string name="welcome">Dobrodošli na</string>
    <string name="back_picture">Slika</string>


    <string name="recipe_name">Naziv recepta</string>
    <string name="time">Vrijeme pripreme (u minutama)</string>
    <string name="meal">Obrok</string>
    <string name="preference">Preferencija</string>
    <string name="add_new_recipe">Dodaj novi recept</string>
    <string name="picture_description">Slika jela</string>
    <string name="pick_date">Odaberite datum</string>
    <string name="ingredients">Sastojci</string>
    <string name="name_ingredient">Naziv sastojka</string>
    <string name="description">Priprema</string>
    <string name="preparation_time">%1$d minuta</string>
    <string name="date_added">%1$s</string>
    <string name="unit_of_measurement">Mj.jd.</string>
    <string name="amount">Količina</string>

    <string name="add_picture_description">Add a picture</string>

    <string name="delete_recipe">Obriši recept</string>
    <string name="update_recipe">Uredi recept</string>
    <string name="favorite">Dodaj recept u omiljeno</string>
    <string name="week_menu">Dodaj recept u tjedni meni</string>
    <string name="favorites">Vaši najdraži recepti</string>
    <string name="unknown_meal">Nepoznato jelo</string>

    <string name="leave_rating">Ostavite ocjenu</string>
    <string name="leave_comment">Ostavite komentar</string>
    <string name="comment_hint">Napišite svoj komentar ovdje...</string>
    <string name="submit_rating">Ocijeni</string>
</resources>