<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipeManagement.EditRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/nedostupno"
            android:contentDescription="@string/picture_description" />

        <EditText
            android:id="@+id/et_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/recipe_name"
            android:autofillHints="name"
            android:inputType="text"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/spinner_meal_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/et_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingridinets"
            android:inputType="textMultiLine"
            android:lines="4"
            android:autofillHints="name"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:autofillHints="name"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_recipe_preparation_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/time"
            android:inputType="number"
            android:autofillHints="name"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/button_start_page_color"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_start_page_color"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>