<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/card_color"
    android:id="@+id/cardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="255dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/picture_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvNameRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/recipe_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTimeRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:drawablePadding="8dp"
                android:padding="5dp"
                android:text="@string/time" />

            <LinearLayout
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/description"
                    android:src="@drawable/ic_restaurant"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/tvCategoryRecipe"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/meal" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivOverflowMenu"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_more_vert"
            app:tint="@color/button_start_page_color" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
