<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".recipeManagement.AddNewRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <!-- Add Picture Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            app:fabSize="normal"
            android:tint="@color/button_start_page_color"
            app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
            android:scaleType="centerInside"
            android:contentDescription="@string/add_picture_description"/>

        <TextView
            android:id="@+id/tvNameRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_recipe_name"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edit_text"
            android:hint="@string/recipe_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:paddingStart="16dp"/>

        <TextView
            android:id="@+id/tvMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/meal"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinner_meal_type"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/edit_text"
            android:padding="10dp"
            android:textColor="@color/black" />

        <!-- Ingredients Section -->
        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/ingridinets"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_recipe_ingredients"
            android:layout_width="355dp"
            android:layout_height="match_parent"
            android:hint="@string/ingridinets"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:maxLines="100"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edit_text"
            android:paddingStart="16dp"/>

        <!-- Recipe Description -->
        <TextView
            android:id="@+id/tv_recipe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_recipe_instructions"
            android:layout_width="355dp"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:maxLines="100"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edit_text"
            android:paddingStart="16dp"/>

        <!-- Time Recipe -->
        <TextView
            android:id="@+id/tvTimeRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_recipe_preparation_time"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:hint="@string/time"
            android:inputType="number"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text"
            android:paddingStart="16dp"/>

        <!-- Button save -->
        <Button
            android:id="@+id/btn_save"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/button_start_page_color"
            android:text="@string/save_button"
            android:textColor="@color/white"
            android:gravity="center"/>

        <!-- Button cancel -->
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/button_cancel_color"
            android:text="@string/cancel_button"
            android:textColor="@color/black"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>
