<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="13dp"
    android:scrollbars="none"
    tools:context=".recipeManagement.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/imgv_recipe"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/back_picture"/>

        <TextView
            android:id="@+id/tv_name_of_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tw_recipe_ingredienst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/ingridinets"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:background="@color/card_color"/>

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingridinets"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/tv_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/card_color"/>

        <TextView
            android:id="@+id/tv_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lineSpacingExtra="6dp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/tv_preparationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

</ScrollView>